--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -8,7 +8,7 @@ const links = [
     items: [
     { title: 'Özellikler', href: 'https://wiki-thunar.vercel.app' },
     { title: 'Thunar', href: 'https://thunar.vercel.app' },
-      { title: 'Ekip', href: 'https://thunarteam.vercel.app' },
+      { title: 'Ekip', href: 'https://kapganteam.vercel.app' },
     ],
   },
 ];
@@ -26,7 +26,7 @@ const social = [
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>Thunar Federasyonu</a>
+          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>Kapgan Federasyonu</a>
         </div>
         <div class="text-sm text-gray-600">
         </div>
@@ -75,7 +75,7 @@ const social = [
           class="w-5 h-5 md:w-6 md:h-6 md:-mt-0.5 bg-cover mr-1.5 float-left rounded-sm bg-[url(~/assets/images/ThunarLogoNoBG.svg)]"
         >
         </span>
-        © 2022 - 2023 <a class="text-blue-600 hover:underline dark:text-gray-200" href="https://thunarfederation.vercel.app/"> Thunar Federasyonu</a> ❤ TÜM HAKLARI SAKLIDIR
+        © 2022 - 2023 <a class="text-blue-600 hover:underline dark:text-gray-200" href="https://Kapganfederation.vercel.app/"> Kapgan Federasyonu</a> ❤ TÜM HAKLARI SAKLIDIR
       </div>
     </div>
   </div>
