--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -61,7 +61,7 @@ import { Picture } from '@astrojs/image/components';
           Sistemleri Getiren Şirket
         </h1>
         <p class="mt-6 max-w-3xl mx-auto text-lg text-slate-600 mb-8 text-center mx-auto dark:text-slate-400">
-          <span class="font-semibold underline decoration-1 decoration-primary-600 underline-offset-2">Thunar Federasyonu</span> kullanıcıları için en güvenli ve en modern tasarıma sahip programları sunmak için can atıyor 
+          <span class="font-semibold underline decoration-1 decoration-primary-600 underline-offset-2">Kapgan Federasyonu</span> kullanıcıları için en güvenli ve en modern tasarıma sahip programları sunmak için can atıyor 
         </p>
         <div
           class="max-w-xs text-sm sm:mt-10 sm:max-w-md mt-6 m-auto flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4"
