--- a/src/components/widgets/Contributors.astro
+++ b/src/components/widgets/Contributors.astro
@@ -2,16 +2,20 @@
 const items = [
   [
     {
-      name: 'Nebil',
-      description: 'LonVost',
+      name: 'Pelin',
+      description: 'Pelu',
+    },
+    {
+      name: 'Durmuş',
+      description: 'CocoPops',
+    },
+    {
+      name: 'Durmuş',
+      description: 'CocoPops',
     },
     {
       name: 'Resul',
       description: 'Resull',
-    },
-    {
-      name: 'Anıl',
-      description: 'anilyucelx',
     },
     {
       name: 'Baybars',
