--- a/src/components/widgets/Sponsors.astro
+++ b/src/components/widgets/Sponsors.astro
@@ -6,13 +6,16 @@ import activeServersLogoSrc from '~/assets/images/active-servers.jpg';
 <section class="py-20">
   <div class="container px-4 mx-auto">
     <div class="max-w-xl mx-auto mb-20 text-center">
-      <h2 class="mt-8 text-5xl lg:text-6xl font-bold font-heading">Ortaklarımız</h2>
+      <h2 class="mt-8 text-5xl lg:text-6xl font-bold font-heading">Bağlılıklar</h2>
     </div>
     <div class="flex flex-wrap justify-center -m-4">
       <div class="w-full md:w-1/2 lg:w-1/5 p-4">
           <div class="mb-6 max-w-max overflow-hidden">
             <a href="https://instagram.com/siber_guvenlik.exe/">
-              <Image
+
+              <p align="center">Kapgan Federasyonu, özgür bir kuruluştur. Kimseye bağlı çalışmaz!</p>
+
+              <!-- <Image
                 src={activeServersLogoSrc}
                 class="transform hover:scale-105 transition ease-in-out duration-1000"
                 quality={90}
@@ -21,7 +24,7 @@ import activeServersLogoSrc from '~/assets/images/active-servers.jpg';
                 loading="eager"
                 width={1280}
                 height={720}
-              />
+              /> -->
             </a>
           </div>
         </div>
