--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -11,7 +11,7 @@ const items = [
       github_url: 'https://hypnotist.vercel.app/',
     },
     {
-      name: 'Yuzaki',
+      name: 'Mikeyy',
       description: 'Tasarımcı',
       avatar: import('~/assets/images/yuzo.png'),
       github_url: 'https://instagram.com/enes8official',
