--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,5 +4,5 @@ import logoSrc from '~/assets/images/ThunarLogoNoBG.svg';
 
 <img class="self-center" src={logoSrc} loading="eager" decoding="async" alt="Batty logo" width="100" height="100" />
 <span class="self-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
-  Kapgan</span
+  Hackadia</span
 >
