--- a/src/components/widgets/AboutCompany.astro
+++ b/src/components/widgets/AboutCompany.astro
@@ -8,11 +8,11 @@
         <h3
           class="mb-20 text-2xl md:text-4xl xl:text-6xl text-center font-bold font-heading tracking-px-n leading-none"
         >
-          Kapgan Federasyonu Hakkında
+          Hackadia Hakkında
         </h3>
         <div class="max-w-3xl mx-auto">
           <p class="text-lg text-slate-600 mb-8 text-center mx-auto dark:text-slate-400">
-            <span class="font-semibold underline decoration-1 decoration-primary-600 underline-offset-2">Kapgan Federasyonu</span> en yeni teknolojileri en güvenli şekilde kullanıcılarına ulaştırmayı hedefleyen küçük bir şirkettir
+            <span class="font-semibold underline decoration-1 decoration-primary-600 underline-offset-2">Hackadia</span> telaffuzu 'Hekadya' ya da 'Hekedya' şeklinde olabilir. Doğru telaffuzu 'Hekadya'dır. Hackadia, en yeni teknolojileri en güvenli şekilde kullanıcılarına ulaştırmayı hedefleyen küçük bir şirkettir
           </p>
         </div>
       </div>
