--- a/src/components/widgets/Features.astro
+++ b/src/components/widgets/Features.astro
@@ -34,10 +34,10 @@ const items = [
     <div class="mb-10 md:mx-auto sm:text-center md:mb-12 max-w-xl">
       <p class="text-base text-primary-600 dark:text-primary-200 font-semibold tracking-wide uppercase">Alanlarımız</p>
       <h2 class="text-2xl md:text-3xl font-bold leading-tighter tracking-tighter mb-4 font-heading">
-        <span class="whitespace-nowrap">Kapgan Federasyonu</span> için Alanları Keşfedin
+        <span class="whitespace-nowrap">Hackadia</span> için Alanları Keşfedin
       </h2>
       <p class="max-w-xl mx-auto sm:text-center text-lg text-gray-600 dark:text-slate-400">
-        Kapgan Federasyonu, tüm alanlarda gelişmeye çalışan bir şirkettir. Birden fazla branşta çalışmalar yürütmeye devam etmektedir
+        Hackadia, tüm alanlarda gelişmeye çalışan bir şirkettir. Birden fazla branşta çalışmalar yürütmeye devam etmektedir
       </p>
     </div>
     <div class="grid mx-auto space-y-6 md:grid-cols-2 md:space-y-0">
