--- a/src/components/widgets/Sponsors.astro
+++ b/src/components/widgets/Sponsors.astro
@@ -13,7 +13,7 @@ import activeServersLogoSrc from '~/assets/images/active-servers.jpg';
           <div class="mb-6 max-w-max overflow-hidden">
             <a href="https://instagram.com/siber_guvenlik.exe/">
 
-              <p align="center">Kapgan Federasyonu, özgür bir kuruluştur. Kimseye bağlı çalışmaz!</p>
+              <p align="center">KHackadia, özgür bir kuruluştur. Kimseye bağlı çalışmaz!</p>
 
               <!-- <Image
                 src={activeServersLogoSrc}
