--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon';
 <section class="bg-primary-100 dark:bg-slate-800">
   <div class="max-w-5xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
     <span class="font-bold">
-      <Icon name="tabler:info-square" class="w-5 h-5 inline-block align-text-bottom" /> Kapgan Artık Özgür:</span
-    > Kapgan Federasyonu, SGE ile yollarını ayırdı!
+      <Icon name="tabler:info-square" class="w-5 h-5 inline-block align-text-bottom" /> Kapgan İsmi Değiştirildi:</span
+    > Kapgan Federasyonu, Hackadia olarak ismini değiştirdi
   </div>
 </section>
