--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Contributors from '~/components/widgets/Contributors.astro';
 
 const meta = {
   title: `Hakkında`,
-  description: `Kapgan Federasyonu hakkında daha fazla bilgiye erişin`,
+  description: `Hackadia hakkında daha fazla bilgiye erişin`,
   canonical: getCanonical(getHomePermalink()),
 };
 ---
